7484: fix dropdown on mobile viewport for long feature types
- allow word wrap
- set a max width to non overflow viewport
- scroll on horizontal overflow

--- a/collab/static/collab/css/base.css
+++ b/collab/static/collab/css/base.css
@@ -43,6 +43,16 @@ main {
   text-transform: none;
 }
 
+.ui.dropdown .menu.text-wrap {
+  max-width: 80vw;
+  overflow: scroll;
+}
+
+.ui.dropdown .menu.text-wrap > .item {
+  white-space: normal;
+  word-wrap: normal;
+}
+
 
 /* ---------------------------------- */
       /* LEAFLET DRAW TOOLBAR */
